# VACOP_nav

./: .gitignore  README.md  fast_launch.sh
src/gps_localization/: Readme.md  package.xml  readme.md  setup.cfg  setup.py
src/gps_localization/config/: ekf_map.yaml  ekf_odom.yaml  navsat.yaml
src/gps_localization/launch/: localization.launch.py
src/map_localization/: package.xml  setup.cfg  setup.py
src/map_localization/launch/: clean_map.launch.py
src/map_localization/maps/: carte_nettoyee_obstacle.pgm
src/odometry/: package.xml  readme.md  setup.py
src/odometry/launch/: odom.launch.py
src/odometry/odometry/: gps_odometry_node.py  odometry.py  odometry_node.py
src/odometry/odometry/odom_motors/: MotorController.py
src/planif_locale/: package.xml  readme.md  setup.cfg  setup.py
src/planif_locale/config/: nav2_params.yaml  nav2_params_avec_costmap.yaml
src/planif_locale/launch/: nav2.launch.py
src/rtabmap_localization/: package.xml  setup.cfg  setup.py
src/rtabmap_localization/launch/: clean_map.launch.py  map.launch.py
src/rtabmap_localization/maps/: carte_nettoyee.pgm  carte_nettoyee.yaml  rtabmap_clean.pgm  rtabmap_clean.yaml
src/rtabmap_localization/rtabmap_localization/: fake_odom.py
src/vacop/: CMakeLists.txt  package.xml  readme.md
src/vacop/config/: joint_names_vacop.yaml  ros2_control.yaml  urdf.rviz
src/vacop/launch/: display.launch.py
src/vacop/meshes/: roue_ar_d.STL  roue_ar_g.STL  roue_av_d.STL  roue_av_g.STL
src/vacop/urdf/: vacop.csv  vacop.urdf
