<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vacop</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="randria_jonathan@todo.todo">randria_jonathan</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_manager</depend>
  <depend>gz_ros2_control</depend>
  <depend>python3-numpy</depend>
  <depend>rclcpp</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>trajectory_msgs</depend>
  <depend>xacro</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

